# Computer-Architectures

./: .gitignore
.github/ISSUE_TEMPLATE/: add_function.md  create_tests.md  implement_stubs.md
Assignment2/: .gitignore  CMakeLists.txt  CmakeLists.txt
Assignment2/include/: alu.h  control-signals.h  inst-decoder-bitmasks.h  inst-decoder-enums.h  inst-decoder.h  mux.h  stages.h  status-register.h
Assignment2/lab2-s2440547/: report.txt
Assignment2/lab2-s2440547/lab2-skeleton-2023/: alu.cc  alu.h  control-signals.h  stages.cc  stages.h
Assignment2/lab2-s2440547/lab2-skeleton-2023/lab2-test-programs-2023/: README.txt
Assignment2/lab2-s2440547/lab2-skeleton-2023/lab2-test-programs-2023/src/: basic.s
Assignment2/lab2-s2440547/lab2-skeleton-2023/tests/: arithmetic_test.conf  arithmetic_test.s  arithmetic_test_immediate.s  comparison1.conf  comparison2.conf  comparison3.s  comparison4.s  comparison5.s  load.conf  load.s  movhi.s  nop.conf
Assignment2/lab2-skeleton-2023/: Makefile  alu.cc  alu.h  control-signals.cc  inst-decoder.h  inst-formatter.cc  memory-control.cc  pipeline.cc  pipeline.h  report.txt  stages.cc  stages.h
Assignment2/lab2-skeleton-2023/lab2-test-programs-2023/: basic.dump.txt
Assignment2/lab2-skeleton-2023/lab2-test-programs-2023/testdata/: level0.test
Assignment2/lab2-skeleton-2023/tests/: arithmetic_test.conf  arithmetic_test.s  arithmetic_test_immediate.conf  arithmetic_test_immediate.s  comparison1.conf  comparison1.s  comparison2.s  comparison3.conf  comparison4.conf  comparison5.s  jump_jal.conf  jump_jal.s  load.conf  load.s  movhi.conf  nop.conf  nop.s
Assignment2/lab2-test-programs-2023/: hellonods.dump.txt
Assignment2/src/: CMakeLists.txt  OPC Instruction Mnemonic  alu.cc  control-signals.cc  inst-decoder.cc  inst-formatter.cc  memory-control.cc  pipeline.cc  stages.cc  status-register.cc
Assignment2/tests/: addi.conf  addi.s
Assignment2/tst/: 000000 NNNNNNNNNNNNNNNNNNNNNNNNNN.pl  CMakeLists.txt  getA_test.cpp  inst-decoder_test.cpp
gtesttutorial/: CMakeLists.txt
gtesttutorial/test/: CMakeLists.txt
