# Assuming you have GTest available
# find_package(GTest REQUIRED)

# Add test files
add_executable(alu_test alu_test.cpp)
#add_executable(config-file_test config-file_test.cpp)
#add_executable(elf-file_test elf-file_test.cpp)
#add_executable(framebuffer_test framebuffer_test.cpp)
add_executable(inst-decoder_test inst-decoder_test.cpp)
add_executable(inst-formatter_test inst-formatter_test.cpp)
#add_executable(memory-bus_test memory-bus_test.cpp)
add_executable(memory-control_test memory-control_test.cpp)
# add_executable(memory_test memory_test.cpp)
add_executable(pipeline_test pipeline_test.cpp)
# add_executable(processor_test processor_test.cpp)
# add_executable(serial_test serial_test.cpp)
add_executable(stages_test stages_test.cpp)
# add_executable(sys-status_test sys-status_test.cpp)

# Link against GTest, the main project library, and any other necessary libraries
target_link_libraries(alu_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(config-file_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(elf-file_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(framebuffer_test gtest gtest_main rv64-emu_lib)
target_link_libraries(inst-decoder_test gtest gtest_main rv64-emu_lib)
target_link_libraries(inst-formatter_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(memory-bus_test gtest gtest_main rv64-emu_lib)
target_link_libraries(memory-control_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(memory_test gtest gtest_main rv64-emu_lib)
target_link_libraries(pipeline_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(processor_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(serial_test gtest gtest_main rv64-emu_lib)
target_link_libraries(stages_test gtest gtest_main rv64-emu_lib)
# target_link_libraries(sys-status_test gtest gtest_main rv64-emu_lib)

# Register the test
add_test(NAME AluTest COMMAND alu_test)
# add_test(NAME ConfigFileTest COMMAND config-file_test)
# add_test(NAME ElfFileTest COMMAND elf-file_test)
# add_test(NAME FrameBufferTest COMMAND framebuffer_test)
add_test(NAME InstDecoderTest COMMAND inst-decoder_test)
add_test(NAME InstFormatterTest COMMAND inst-formatter_test)
# add_test(NAME MemoryBusTest COMMAND memory-bus_test)
add_test(NAME MemoryControlTest COMMAND memory-control_test)
# add_test(NAME MemoryTest COMMAND memory_test)
add_test(NAME PipelineTest COMMAND pipeline_test)
# add_test(NAME ProcessorTest COMMAND processor_test)
# add_test(NAME SerialTest COMMAND serial_test)
add_test(NAME StagesTest COMMAND stages_test)
# add_test(NAME SysStatusTest COMMAND sys-status_test)

